syntax = 'proto3';

service MessageService {
  rpc SetMessage (Message) returns (Message) {}
  rpc GetMessage (Empty) returns (Message) {}
}

message Empty {}

message Message {
  string content = 1;
}
